<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:fontFamily="@font/roboto_medium"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:text="@string/please_select_a_verification_process"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:visibility="visible"
        app:layout_constraintDimensionRatio="1.1"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/btn_phone"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="@dimen/_10sdp"
        android:focusable="true"
        android:text="@string/phone"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:drawableStartCompat="@drawable/ico_mobile" />

    <TextView
        android:id="@+id/btn_mail"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="@dimen/_10sdp"
        android:focusable="true"
        android:text="@string/mail"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:drawableStartCompat="@drawable/ico_mail_white" />

</LinearLayout>