<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ui_background"
    tools:context=".ForgetPasswordFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/sign_in_tb"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_arrow"
        app:title="Forget Password"
        app:titleCentered="true"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/tx_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/roboto_medium"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_17sdp"
        android:text="@string/mail"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_tb" />

    <LinearLayout
        android:id="@+id/mobile_tx_input_forget"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/frame_background"
        android:hint="@string/enter_your_email"
        android:orientation="horizontal"
        android:layoutDirection="ltr"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_mail">

        <com.hbb20.CountryCodePicker
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            app:ccpDialog_background="@drawable/ui_background"
            app:ccpDialog_fastScroller_bubbleColor="@color/yellow"
            app:ccpDialog_showCloseIcon="true"
            app:ccpDialog_textColor="@color/white"
            app:ccp_arrowColor="@color/white"
            app:ccp_contentColor="@color/white"
            app:ccp_defaultPhoneCode="971"
            app:ccp_showNameCode="false" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/enter_your_phone"
            android:inputType="number"
            android:lines="1"
            android:maxLength="30"
            android:textColor="@color/white"
            android:textColorHint="@color/text_hint" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_tx_input_forget"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_mail"
        app:startIconDrawable="@drawable/ico_mail">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditTextStyle"
            android:hint="@string/enter_your_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send_code"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:textSize="@dimen/_13sdp"
        android:background="?selectableItemBackground"
        android:text="@string/send_code"
        android:textColor="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline2" />

    <com.chaos.view.PinView
        android:id="@+id/firstPinView"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_19sdp"
        android:cursorVisible="true"
        android:hint="01234"
        android:inputType="number"
        android:textColor="@color/yellow"
        android:textColorHint="@color/text_hint"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cursorColor="@color/yellow"
        app:cursorWidth="2dp"
        app:hideLineWhenFilled="false"
        app:itemCount="5"
        app:itemHeight="@dimen/_55sdp"
        app:itemRadius="10dp"
        app:itemSpacing="@dimen/_10sdp"
        app:itemWidth="@dimen/_47sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_timer_count_down"
        app:lineColor="@color/yellow"
        app:lineWidth="1.5dp"
        app:viewType="rectangle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_phone"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstPinView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        style="@style/submitButtonStyle"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_desc"
        app:layout_constraintVertical_bias="0.905" />

    <TextView
        android:id="@+id/txt_timer_count_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="TextView"
        android:visibility="invisible"
        android:textAlignment="center"
        android:textColor="@color/text_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_send_code" />

    <TextView
        android:id="@+id/txt_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_14sdp"
        android:layout_marginTop="48dp"
        android:visibility="invisible"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/please_check_your_mail_inbox"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstPinView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="159dp" />


</androidx.constraintlayout.widget.ConstraintLayout>